Добавлены изменения для полноэкранного отображения, но пока не работает

--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
           <!-- Просмотр изображения -->
           <div class="big-picture__img">
             <img
+              class="big-picture-photo"
               src="img/logo-background-3.jpg"
               alt="Девушка в купальнике"
               width="600"
