--- a/index.html
+++ b/index.html
@@ -446,5 +446,20 @@
         </div>
       </section>
     </template>
+
+    <template id="post-comment">
+      <li class="social__comment">
+        <img
+          class="social__picture"
+          src="img/avatar-4.svg"
+          alt="Аватар комментатора фотографии"
+          width="35"
+          height="35"
+        />
+        <p class="social__text">
+          Мега фото! Просто обалдеть. Как вам так удалось?
+        </p>
+      </li>
+    </template>
   </body>
 </html>
